qa-env/server/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: qa
  annotations:
    cloud.google.com/backend-config: '{"default": "emr-qa-server"}'
spec:
  selector:
    app: qa-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
