qa-env/server/backend-to-mongo-net-pol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-mongo
  namespace: qa
spec:
  podSelector:
    matchLabels:
      app: qa-mongodb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: qa-backend
