qa-env/server/load-balancer-to-server-net-pol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loadbalancer-to-server
  namespace: qa
spec:
  podSelector:
    matchLabels:
      app: qa-backend
  ingress:
  - from:
    - ipBlock:
        cidr: 35.191.0.0/16
    - ipBlock:
        cidr: 130.211.0.0/22
    ports:
    - protocol: TCP
      port: 80
